--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,7 +28,7 @@ jobs:
         pip install poetry
         
     - name: Install dependencias do projeto
-      run: poetry install --without doc  # sem o grupo de dependencia doc
+      run: poetry install  # sem o grupo de dependencia doc
         
     - name: Run Tests
       run: poetry run task test --cov-report=xml
