build(continue): finished app extrato.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.11"
 django = "^4.2.3"
 pillow = "^10.0.0"
+weasyprint = "^59.0"
 
 
 [tool.poetry.group.dev.dependencies]
